@@ -1,3 +1,7 @@
+2008-07-05  Pavel Roskin  <proski@gnu.org>
+
+	* disk/ata.c: Use named constants for status bits.
+
 2008-07-04  Pavel Roskin  <proski@gnu.org>
 
 	* kern/i386/linuxbios/init.c (grub_machine_init): Cast addr to
